# b-pdf-parser

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  benchmark.py  generate_test_pdfs.py  pyproject.toml  requirements.txt
.hypothesis/constants/: 0b84732c19d915d6  296ace4d4c1664a4  36aa6e8ba14b01c2  450ca21e0dc77e65  7537536b2073d5f0  83a61ba3ee1d6d86  8b3b2261964ff47e  dadd8837b8b1e623  dca3232de635526a  e4e7948fe58f022e
.serena/: project.yml
output/: benchmark_results.csv
pdfparser/: __init__.py  batch.py  pdfoxide_parser.py  pdfplumber_parser.py  pymupdf_parser.py  pypdf_parser.py  utils.py
plan/: 1.0-v1.md  2. .env.md  3.pymupdf-(fitz).md  4.-pdfplumber.md  5.-pypdf.md
tests/: __init__.py  test_batch.py  test_indonesian_format.py  test_parsers.py  test_pdfoxide_preprocessing.py  test_utils.py
