[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b-pdf-parser"
version = "1.1.0"
description = "Indonesian Bank Statement PDF Parser - extracts metadata and transactions from Indonesian bank statements"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "b-pdf-parser contributors"}
]
dependencies = [
    "PyMuPDF==1.26.5",
    "pdfplumber>=0.10.0",
    "pypdf>=3.0.0",
    "pdf-oxide>=0.2.2",
    "reportlab>=4.0.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "pyrefly>=0.46.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pdfparser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["*.md", "*.txt", "*.toml", "*.env", ".env*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "UP006", "UP035"]
